--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -12,8 +12,8 @@
   <input type="submit" value="Logout"/>
 </form>
 
-<form method="POST" th:action="@{/orders}" th:object="${order}"
-      id="orderForm">
+<form method="POST" th:action="@{/orders}" th:object="${order}" id="orderForm">
+  <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
   <h1>Order your taco creations!</h1>
 
   <img th:src="@{/images/TacoCloud.png}"/>
